--- a/upload/frontend/view/default/stylesheet/sass/partial/_comments.scss
+++ b/upload/frontend/view/default/stylesheet/sass/partial/_comments.scss
@@ -927,6 +927,10 @@
 
 /* Topic */
 
+.cmtx_topic_block {
+    overflow: auto;
+}
+
 .cmtx_topic_intro {
     font-weight: normal;
 }
